# TWW3-Mod-Profile-Manager

./: .gitignore  README.md  config.example  flake.nix  install.sh  twwh3-profile.sh  twwh3-run.sh
.github/workflows/: release.yml
tui/: Cargo.toml
tui/src/: app.rs  bundle.rs  launch.rs  main.rs  model.rs  overlay.rs  paths.rs  profiles.rs  steam.rs  store.rs  ui.rs  versions.rs
